<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, InVesaliusMobileActivity!</string>
    <string name="app_name">InVesalius Mobile</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="filesDirectory">Files Directory</string>
	<string name="descriptionFilesDirectory">Define path in your device where the images are saved:</string>
    <string name="downloadDemos">Download Demos</string>
	<string name="descriptionDownloadDemos">Download some examples of images:</string>
    <string name="settings">SETTINGS</string>
    <string name="click">Click here</string>

</resources>
